prevent overlap with line numbers

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     background-color: var(--background-primary);
 
     position: absolute;
-    left: 30px;
+    left: 15px;
 
     padding: 0 3px;
     margin-top: 3px;
